client/app/styles/main.css
body {
    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
    font-weight: 300;
}

/* Begin - animate the menus*/
.animate-show {
    line-height: 20px;
    opacity: 1;
    padding: 10px;
    border: 1px solid black;
    background: white;
}

.animate-show.ng-hide-add.ng-hide-add-active,
.animate-show.ng-hide-remove.ng-hide-remove-active {
    -webkit-transition: all linear 0.5s;
    transition: all linear 0.5s;
}

.animate-show.ng-hide {
    line-height: 0;
    opacity: 0;
    padding: 0 10px;
}

/* End - animate the menus*/
.btn-navbar,
.btn-group
{
    height: 100%;
}

.product-display {
    padding-top: 53px;
    padding-bottom: 55px;
}

.navbar-absolute-bottom img {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.navbar-brand-center {
    padding-top: 10px;
}

.navbar-app {
    color: #ffffff;
    background: #e38802;
}

.navbar-absolute-bottom {
    background: #ffffff;
    z-index: 1002;
}

.sidebar-left,
.sidebar-right {
    background: #b8bcc0;
    width: 70%;
}

.sidebar-left p,
.sidebar-right p {
    font-size: 1.3em;
}

.sidebar.ng-show {
    opacity: 1;
}

.menuFiller {
    background: #f3f3f3;
    min-height: 50px;
}

.menuFillerBottom {
    background: #f3f3f3;
    min-height: 30px;
}

.menuOption {
    background: #ffffff;
    margin-bottom: 1px;
    padding: 0.7em;
}

.menuOption img {
    height: 20px;
    width: 20px;
}

.menuSubItem {
    background: #f3f3f3;
    padding-top: 2em;
    padding-bottom: 2em;
    border-style: solid;
    border-width: 0 0 1px 0
}

.menuSubItem td div img {
    height: 40px;
    width: 68px;
}

.product-display {
    background: #c0c0c0;
    width: 100%;
}

.product-display table tr {
    border-style: solid;
    border-width: 0 0 1px 0
}

#anchornode {
    visibility: hidden;
    border-style: none;
    height: 0;
    width: 100%;
}

.inactive {
    opacity: 0.1;
}

.group {
    width: 100%;
    background: #ffffff;
    height: 45px;
    font-size: 1.3em;
}

.group.expanded {
    color: #3d5e85;
}

.product {
    background: #f1f5f7;
    color: #3d5e85;
    width: 100%;
}

.product.expanded {
    background: #ffffff;
    width: 100%;
}

.productTitle {
    font-weight: 400;
    font-size: 1.1em;
}

.prodDescription {
    color: #000000;
}

.productNotification {
    color: #3d5e85;
}

.subgroup,
.product {
    width: 100%;
    vertical-align: middle;
}

.subgroup {
    background: #f3f3f3;
}

.subgroup td {
    padding-top: 0.5em;
    padding-bottom: 0.5em;
    font-size: 1.1em;
}

.subgroup td img,
.group td img {
    height: 25px;
    width: 25px;
}

/*.subgroup td,*/
/*.group td {*/
/*font-size: 1.3em;*/
/*vertical-align: middle;*/
/*}*/

.updownArrow {
    height: 22px;
    width: 12px;
}

.userOptions {
    background: #ffffff;
    border-style: solid;
    border-width: 1px 0 0 0
}

.userOptions table tr {
    background: #ffffff;
    border-style: none;
}

.userOptions table tr td {
    margin-left: .3em;
    margin-right: .3em;
    border-left: #c0c0c0;
}

.uoptionImg {
    height: 2em;
    width: 2em;
}

.wrapper {
    width: 50px;
    height: 50px;
    border-radius: 50px;
    overflow: hidden;
    -webkit-border-radius: 50px;
    -moz-border-radius: 50px;
    border: 4px double #c0c0c0;

}

.wrapper img {
    width: 50px;
    height: 40px;
}

.wrapperMenu {
    width: 50px;
    height: 50px;
    border-radius: 50px;
    overflow: hidden;
    -webkit-border-radius: 50px;
    -moz-border-radius: 50px;
    border: 4px solid #c0c0c0;
    white-space: nowrap;
    text-align: center;

}

.wrapperMenu img {
    height: 70px;
    width: 70px;
}

.anchor {
    display: block;
    position: relative;
    top: -50px;
    visibility: hidden;
}

#separator {
    width: 8px;
    height: 8px;
    margin-left: 1em;
}

.menubackground {
    opacity: 0.4;
    background: #565656;
}

.Overlay {
    z-index: 1001;
    background: #565656;
    position: absolute;
    top: 0;
    left: 0;
    min-height: 100%;
    min-width: 100%;
}

.yelp table tr  {
    width: 80%;
    align-content: center;
}

.yelp table tr td {
    padding: 1em;
    align-content: center;
}

.reviews {
    position: relative;
    padding: 0.5em;
    background: #b8bcc0;
    width: 90%;
    margin-left: 5%;
}

.yelp-navbar {
    background: #d80b00;
}


.logo {
    text-align: center;
    width: 80%;
    padding-top: 1em;
    padding-left: 15%;
    border-bottom: 1px;
}
.logo img {
    height: 60px;
}

.productPopup {
    min-width: 80%;
    margin-top: 20%;
    margin-right: 5%;
    margin-left: 5%;
    min-height: 70%;
    background: #f1f5f7;
    caption-side: top;
    border-radius: 5px;
}

.prodPopHeader{
    font-size: 1.1em;
    padding-top: 1.3em;
    padding-bottom: 1.3em;
    text-align: center;

}
.prodPopDesc {
    text-align: center;
    padding-top: 1.3em;
    padding-bottom: 1.3em;
}

.prodPopPrice {
    text-align: center;
    padding-top: 1.3em;
    padding-bottom: 1.3em;
    color: #3d5e85;
    font-size: 1.7em;
}

.prodPopCaption {
    background: #e38802;
    width: 30%;
    height: 3em;
    margin-left: 35%;
    vertical-align: middle;
    padding-top: 0.5em;
    border-radius: 6px;
    text-align: center;
    font-size: 1.3em;
}

